--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,32 @@
 services:
+  fastapi:
+    build: ./app
+    container_name: fastapi_app
+    ports:
+      - "8000:8000"
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.fastapi.rule=Host(`localhost`)"
+      - "traefik.http.services.fastapi.loadbalancer.server.port=8000"
+    networks:
+      - web
+
   traefik:
     image: traefik:v2.10
+    container_name: traefik
     command:
       - "--api.insecure=true"
       - "--providers.docker=true"
       - "--entrypoints.web.address=:80"
     ports:
-      - "80:80"      # Port d'entrée HTTP
-      - "8080:8080"  # Dashboard Traefik (interface)
+      - "80:80"
+      - "8080:8080"
     volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-    networks:
-      - web
-
-  fastapi:
-    build: ./app
-    container_name: fastapi_app
-    ports:
-      - "8000:8000" 
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.fastapi.rule=PathPrefix(`/`)"
-      - "traefik.http.routers.fastapi.entrypoints=web"
-      - "traefik.http.services.fastapi.loadbalancer.server.port=8000"
+      - /var/run/docker.sock:/var/run/docker.sock:ro
     networks:
       - web
 
 networks:
   web:
     driver: bridge
+
